--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "npx nodemon",
+    "start:build": "npm run build && node dist/index.js",
+    "build": "npx tsc",
     "exec": "npx ts-node ./src/index.ts",
     "lint": "npx eslint . --fix"
   },
@@ -32,6 +34,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.0"
   }
 }
