--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start:build": "npm run build && node dist/index.js",
     "build": "npx tsc",
     "exec": "npx ts-node ./src/index.ts",
-    "lint": "npx eslint . --fix"
+    "lint": "npx eslint . --fix",
+    "test": "vitest",
+    "test-coverage": "npx vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "@vitest/coverage-v8": "^1.2.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
