--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -33,4 +33,11 @@ jobs:
       - name: linting typescript
         run: make lint
       - name: testing
-          run: make test
+        run: make test
+      - name: test coverage
+        uses: paambaati/codeclimate-action@v5
+          env:
+            CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          with:
+            coverageCommand: make test-coverage
+            debug: true
