--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -34,3 +34,10 @@ jobs:
         run: make lint
       - name: testing
         run: make test
+      - name: test & publish code coverage
+        uses: paambaati/codeclimate-action@v5.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
