--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/alyonakkk/typescript-developer-project-81/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/alyonakkk/typescript-developer-project-81/actions)",
   "main": "index.ts",
+  "module": "dist/index.js",
   "scripts": {
     "start:dev": "npx nodemon",
     "start:build": "npm run build && node dist/index.js",
